--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 </head>
 <body>
     <div class="title">
-        <h1>Simon: Memory game</h1> 
-        <h2>Press a key to start</h2>
+        <h1>Simon: Memory Game</h1> 
+        <h2 id="level-title">Press a key to start</h2>
     </div>
 
     <div class="game-board">
         <div class="buttons">
             <div class="row">
                 <div class="col-lg-6 left">
-                    <button class="btn button1"><b>1</b></button>
+                    <button id="green" class="btn button1"><b>1</b></button>
                 </div>
                 <div class="col-lg-6 right">
-                    <button class="btn button2"><b>2</b></button>
+                    <button id="red" class="btn button2"><b>2</b></button>
                 </div>
             </div>   
             <div class="row">
                 <div class="col-lg-6 left">
-                    <button class="btn button3"><b>3</b></button>
+                    <button id="yellow" class="btn button3"><b>3</b></button>
                 </div>
                 <div class="col-lg-6 right">
-                    <button class="btn button4"><b>4</b></button>
+                    <button id="blue" class="btn button4"><b>4</b></button>
                 </div>
             </div>        
         </div>
